--- a/opencl/tracer_opencl.sh.in
+++ b/opencl/tracer_opencl.sh.in
@@ -19,11 +19,14 @@ whichlib() {
                match($1, "^lib") && match($1, p) { print header "/" $1}'
 }
 
-whichlib64() {
+whichlib64_head() {
+  # This function return only the first lib found
+  # This avoid a broken pipe error when the old pattern `whichlib64 $foo | head - n1` was used
   for lib in $(whichlib $1)
   do
     if objdump -a $lib | grep 64 > /dev/null; then
       echo $lib
+      break
     fi
   done
 }
@@ -93,7 +96,7 @@ then
 fi
 if [ -z "$LTTNG_UST_OPENCL_LIBOPENCL" ]
 then
-  export LTTNG_UST_OPENCL_LIBOPENCL=$(whichlib64 libOpenCL.so | head -n 1)
+  export LTTNG_UST_OPENCL_LIBOPENCL=$(whichlib64_head libOpenCL.so)
 fi
 export LTTNG_UST_ALLOW_BLOCKING=1
 export LD_PRELOAD=$libdir/libTracerOpenCL.so:$LD_PRELOAD
