--- a/ze/tracer_ze.sh.in
+++ b/ze/tracer_ze.sh.in
@@ -19,11 +19,14 @@ whichlib() {
                match($1, "^lib") && match($1, p) { print header "/" $1}'
 }
 
-whichlib64() {
+whichlib64_head() {
+  # This function return only the first lib found
+  # This avoid a broken pipe error when the old pattern `whichlib64 $foo | head - n1` was used
   for lib in $(whichlib $1)
   do
     if objdump -a $lib | grep 64 > /dev/null; then
       echo $lib
+      break
     fi
   done
 }
@@ -71,7 +74,7 @@ then
 fi
 if [ -z "$LTTNG_UST_ZE_LIBZE_LOADER" ]
 then
-  export LTTNG_UST_ZE_LIBZE_LOADER=$(whichlib64 libze_loader.so | head -n 1)
+  export LTTNG_UST_ZE_LIBZE_LOADER=$(whichlib64_head libze_loader.so)
 fi
 export LTTNG_UST_ALLOW_BLOCKING=1
 export LD_PRELOAD=$libdir/libTracerZE.so:$LD_PRELOAD
