--- a/opencl/tracer_opencl.sh.in
+++ b/opencl/tracer_opencl.sh.in
@@ -3,6 +3,7 @@ exec_prefix=@prefix@
 libdir=@libdir@
 pkglibdir=$libdir/@PACKAGE@
 prefix=@prefix@
+datarootdir=@datarootdir@
 datadir=@datadir@
 
 # Find all location of a `.so`
