--- a/xprof/xprof.sh.erb.in
+++ b/xprof/xprof.sh.erb.in
@@ -4,6 +4,7 @@ libdir=@libdir@
 bindir=@bindir@
 pkglibdir=$libdir/@PACKAGE@
 prefix=@prefix@
+datarootdir=@datarootdir@
 datadir=@datadir@
 
 <%# https://www.gnu.org/software/libc/manual/html_node/Argument-Syntax.html
