--- a/xprof/Makefile.am
+++ b/xprof/Makefile.am
@@ -1,5 +1,11 @@
 .DELETE_ON_ERROR:
 
+if STRICT
+  WERROR = -Werror
+else
+  WERROR =
+endif
+
 bin_SCRIPTS = iprof 
 
 iprof: $(top_builddir)/xprof/xprof.sh.erb
@@ -41,8 +47,8 @@ libXProf_la_SOURCES = \
 
 # Compiler flags
 libXProf_la_CPPFLAGS = -I$(top_srcdir)/utils -I$(srcdir)/include -I./
-libXProf_la_CFLAGS = -Wall -Wextra -Wno-unused-parameter -Werror $(BABELTRACE2_CFLAGS)
-libXProf_la_CXXFLAGS = -std=c++17 -Wall -Wextra -Wno-unused-parameter -Werror $(BABELTRACE2_CFLAGS)
+libXProf_la_CFLAGS = -Wall -Wextra -Wno-unused-parameter $(WERROR) $(BABELTRACE2_CFLAGS)
+libXProf_la_CXXFLAGS = -std=c++17 -Wall -Wextra -Wno-unused-parameter $(WERROR) $(BABELTRACE2_CFLAGS)
 libXProf_la_LDFLAGS = $(BABELTRACE2_LIBS) -avoid-version -module
 
 # Cannot use check_LTLIBRARIES because we need the shared version of those
