--- a/opencl/tracer_opencl.sh.in
+++ b/opencl/tracer_opencl.sh.in
@@ -123,11 +123,17 @@ then
 fi
 if [ -z "$LTTNG_UST_OPENCL_LIBOPENCL" ]
 then
-  export LTTNG_UST_OPENCL_LIBOPENCL=$(whichlib64_head libOpenCL.so)
+  LTTNG_UST_OPENCL_LIBOPENCL=$(whichlib64_head libOpenCL.so)
+  if [ -n "$LTTNG_UST_OPENCL_LIBOPENCL" ]
+  then
+    export LTTNG_UST_OPENCL_LIBOPENCL="$LTTNG_UST_OPENCL_LIBOPENCL"
+    export LD_LIBRARY_PATH=$pkglibdir/opencl:$LD_LIBRARY_PATH
+  fi
+else
+  export LD_LIBRARY_PATH=$pkglibdir/opencl:$LD_LIBRARY_PATH
 fi
-export LTTNG_UST_ALLOW_BLOCKING=1
 export LD_PRELOAD=$libdir/libTracerOpenCL.so:$LD_PRELOAD
-export LD_LIBRARY_PATH=$pkglibdir/opencl:$LD_LIBRARY_PATH
+export LTTNG_UST_ALLOW_BLOCKING=1
 lttng start
 
 ctrl_c() {
