--- a/ze/tracer_ze.sh.in
+++ b/ze/tracer_ze.sh.in
@@ -93,11 +93,17 @@ then
 fi
 if [ -z "$LTTNG_UST_ZE_LIBZE_LOADER" ]
 then
-  export LTTNG_UST_ZE_LIBZE_LOADER=$(whichlib64_head libze_loader.so)
+  LTTNG_UST_ZE_LIBZE_LOADER=$(whichlib64_head libze_loader.so)
+  if [ -n "$LTTNG_UST_ZE_LIBZE_LOADER" ]
+  then
+    export LTTNG_UST_ZE_LIBZE_LOADER="$LTTNG_UST_ZE_LIBZE_LOADER"
+    export LD_LIBRARY_PATH=$pkglibdir/ze:$LD_LIBRARY_PATH
+  fi
+else
+  export LD_LIBRARY_PATH=$pkglibdir/ze:$LD_LIBRARY_PATH
 fi
-export LTTNG_UST_ALLOW_BLOCKING=1
 export LD_PRELOAD=$libdir/libTracerZE.so:$LD_PRELOAD
-export LD_LIBRARY_PATH=$pkglibdir/ze:$LD_LIBRARY_PATH
+export LTTNG_UST_ALLOW_BLOCKING=1
 lttng start
 
 ctrl_c() {
