--- a/xprof/xprof.sh.erb.in
+++ b/xprof/xprof.sh.erb.in
@@ -297,6 +297,7 @@ while (( "$#" )); do
 done
 
 if [ -n "$debug" ]; then
+    set -x
     export LIBBABELTRACE2_INIT_LOG_LEVEL=WARNING
     export BABELTRACE_CLI_LOG_LEVEL=WARNING
 else
