--- a/ze/ze_events.yaml
+++ b/ze/ze_events.yaml
@@ -41,6 +41,17 @@ lttng_ust_ze_properties:
     - [ ctf_integer_hex, uintptr_t, hDriver, "(uintptr_t)hDriver" ]
     - [ ctf_integer_hex, uintptr_t, hDevice, "(uintptr_t)hDevice" ]
     - [ ctf_sequence_text, uint8_t, pDeviceProperties_val, pDeviceProperties, size_t, "sizeof(ze_device_properties_t)" ]
+  - name: subdevice
+    args:
+    - [ ze_driver_handle_t, hDriver ]
+    - [ ze_device_handle_t, hDevice ]
+    - [ ze_device_handle_t, hSubDevice ]
+    - [ ze_device_properties_t *, pDeviceProperties ]
+    fields:
+    - [ ctf_integer_hex, uintptr_t, hDriver, "(uintptr_t)hDriver" ]
+    - [ ctf_integer_hex, uintptr_t, hDevice, "(uintptr_t)hDevice" ]
+    - [ ctf_integer_hex, uintptr_t, hSubDevice, "(uintptr_t)hSubDevice" ]
+    - [ ctf_sequence_text, uint8_t, pDeviceProperties_val, pDeviceProperties, size_t, "sizeof(ze_device_properties_t)" ]
   - name: device_timer
     args:
     - [ ze_device_handle_t, hDevice ]
