--- a/xprof/xprof.sh.erb.in
+++ b/xprof/xprof.sh.erb.in
@@ -42,19 +42,19 @@ display_help() {
     echo " $(basename $0) [option]... <application> <application-arguments>"
     echo " $(basename $0) [option]... -r [<trace>]..."
     echo
-    echo "  -h, --help         Show this screen"
-    echo "  -v, --version      Print the version string"
-    echo "  -e, --extended     Print information for each Hostname / Process / Thread / Device"
-    echo "  -t, --trace        Display trace"
-    echo "  -l, --timeline     Dump the timeline"
-    echo "  -m, --mangle       Use mangled name"
-    echo "  -j, --json         Summary will be printed as json"
-    echo "  -a, --asm          Dump in your current directory low level kernels informations (asm,isa,visa,...)."
-    echo "  -f, --full         All API calls will be traced. By default and for performance raison, some of them will be ignored"
-    echo "  --metadata         Display metadata"
-    echo "  --max-name-size    Maximun size allowed for names"
-    echo "  -r, --replay       <application> <application-arguments> will be traited as pathes to traces folders ($HOME/lttng-traces/...)"
-    echo "                     If no arguments are provided, will use the latest trace available"
+    echo "  -h, --help               Show this screen"
+    echo "  -v, --version            Print the version string"
+    echo "  -e, --extended           Print information for each Hostname / Process / Thread / Device"
+    echo "  -t, --trace              Display trace"
+    echo "  -l, --timeline           Dump the timeline"
+    echo "  -j, --json               Summary will be printed as json"
+    echo "  -a, --asm                Dump in your current directory low level kernels informations (asm,isa,visa,...)."
+    echo "  -f, --full               All API calls will be traced. By default and for performance raison, some of them will be ignored"
+    echo "  -m, --mangle             Use mangled name"
+    echo "  --metadata               Display metadata"
+    echo "  --max-name-size <size>   Maximun size allowed for kernels names (default -1)"
+    echo "  -r, --replay    [path]   <application> <application-arguments> will be traited as pathes to traces folders ($HOME/lttng-traces/...)"
+    echo "                           If no arguments are provided, will use the latest trace available"
     echo
     echo " Example:"
     echo " $(basename $0) ./a.out"
