--- a/ze/zes_meta_parameters.yaml
+++ b/ze/zes_meta_parameters.yaml
@@ -131,6 +131,8 @@ meta_parameters:
   zesDeviceEnumPowerDomains:
     - [ InOutScalar, pCount ]
     - [ OutArray, phPower, pCount ]
+  zesDeviceGetCardPowerDomain:
+    - [ OutScalar, phPower ]
   zesPowerGetProperties:
     - [ OutScalar, pProperties ]
   zesPowerGetEnergyCounter:
