--- a/utils/Makefile.am
+++ b/utils/Makefile.am
@@ -9,6 +9,7 @@ noinst_HEADERS = \
 	include/utarray.h \
 	include/uthash.h \
 	include/utlist.h \
+	include/json.hpp \
 	tests_template/interval_profiling_block.yaml.erb \
 	tests_template/interval_profiling_normal.yaml.erb \
 	tests_template/interval_common.dust.erb \
