--- a/utils/Makefile.am
+++ b/utils/Makefile.am
@@ -67,4 +67,5 @@ EXTRA_DIST = \
 	dump_trace_format.rb \
 	gen_babeltrace_dispatchers.rb \
 	gen_babeltrace_callbacks.rb \
+	gen_babeltrace_emitter.rb \
 	thapi_metadata_tracepoints.tp
